# opengl_template

./: CMakeLists.txt  Dependency.cmake  README.md
shader/: blur_5x5.fs  defer_geo.fs  defer_geo.vs  defer_light.fs  grass.vs  lighting.fs  lighting.vs  lighting_shadow.fs  lighting_shadow.vs  normal.fs  normal.vs  pbr.fs  pbr.vs  pbr_texture.fs  pbr_texture.vs  per_vertex_color.fs  per_vertex_color.vs  simple.fs  simple.vs  ssao.fs  ssao.vs  texture.fs  texture.vs
src/: buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  context.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  program.cpp  program.h  shader.cpp  shader.h  shadow_map.cpp  shadow_map.h  texture.cpp  texture.h  vertex_layout.cpp  vertex_layout.h
